--- a/index.html
+++ b/index.html
@@ -94,10 +94,19 @@
                         <a class="nav-link me-lg-3" href="#page-top">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
+                        <a class="nav-link me-lg-3" href="#publications">微分方程概论</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
+                        <a class="nav-link me-lg-3" href="#awards">线性代数B2</a>
+                    </li>
+		    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#awards">实用随机过程</a>
+                    </li>
+		    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#awards">数理统计</a>
+                    </li>
+		    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#awards">实分析</a>
                     </li>
 
                 </ul>
