--- a/index.html
+++ b/index.html
@@ -108,14 +108,16 @@
 		    <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#awards">实分析</a>
                     </li>
-
+		     <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#awards">政治课</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <!-- Top Section -->
-    <section class="top-section" style="background-image: url('static/assets/img/background.jpeg');">
+    <section class="top-section" style="background-image: url('static/assets/img/background.jpg');">
         <div class="top-section-content">
             <div class="container px-5">
                 <h2 id="top-section-bg-text" class="text-white display-3 lh-1 font-alt"></h2>
@@ -127,7 +129,7 @@
     <!-- Photo -->
     <div class="container px-5">
         <div id="avatar">
-            <img class="shadow" src="static/assets/img/photo.png">
+            <img class="shadow" src="static/assets/img/photo.jpg">
         </div>
     </div>
     <!-- Photo -->
