--- a/index.html
+++ b/index.html
@@ -80,41 +80,33 @@
 <body id="page-top">
     <!-- Navigation-->
     <nav class="header navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
-        <div class="container px-5">
-            <a id="page-top-title" class="navbar-brand fw-bold" href="#page-top"></a>
-            <!-- <a href="#page-top"><img src="static/assets/img/CUMT_LOGO.svg" style="width: 11rem;"></a> -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                MENU
-                <i class="bi-list"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#page-top">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#publications">微分方程概论</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#awards">线性代数B2</a>
-                    </li>
-		    <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#awards">实用随机过程</a>
-                    </li>
-		    <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#awards">数理统计</a>
-                    </li>
-		    <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#awards">实分析</a>
-                    </li>
-		     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#awards">政治课</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+        <!-- 修改导航菜单部分，保持其他所有内容不变 -->
+<div class="collapse navbar-collapse" id="navbarResponsive">
+    <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
+        <li class="nav-item">
+            <a class="nav-link me-lg-3" href="#home">网站首页</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link me-lg-3" href="#differential-equations">微分方程概论</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link me-lg-3" href="#linear-algebra">线性代数B2</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link me-lg-3" href="#stochastic-processes">实用随机过程</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link me-lg-3" href="#mathematical-statistics">数理统计</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link me-lg-3" href="#real-analysis">实分析</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link me-lg-3" href="#politics">政治课</a>
+        </li>
+    </ul>
+</div>
+                    </nav>
 
     <!-- Top Section -->
     <section class="top-section" style="background-image: url('static/assets/img/background.jpg');">
@@ -134,41 +126,88 @@
     </div>
     <!-- Photo -->
     
-    <!-- Home -->
+   <!-- 首页内容 -->
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="home">
         <div class="container px-5">
             <header>
-                <h2 id="home-subtitle"> </h2>
-                <!-- <span class="bi bi-list"></span> -->
+                <h2><i class="bi bi-house-door"></i> 网站首页</h2>
             </header>
-            <div class="main-body" id="home-md"></div>
+            <div class="main-body">
+            </div>
         </div>
     </section>
-    <!-- Home -->
 
-    <!-- Publications -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
+    <!-- 微分方程概论 -->
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="differential-equations">
         <div class="container px-5">
             <header>
-                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;PUBLICATIONS</h2>
+                <h2><i class="bi bi-graph-up"></i> 微分方程概论</h2>
             </header>
-            <div class="main-body" id="publications-md"></div>
-
+            <div class="main-body">
+                <!-- 这里可以放置课程内容 -->
+            </div>
         </div>
     </section>
-    <!-- Publications  -->
 
-    <!-- Awards -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="awards">
+    <!-- 线性代数B2 -->
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="linear-algebra">
         <div class="container px-5">
             <header>
-                <h2 id="awards-subtitle"><i class="bi bi-award-fill"></i>AWARDS </h2>
+                <h2><i class="bi bi-grid"></i> 线性代数B2</h2>
             </header>
-            <div class="main-body" id="awards-md"></div>
-
+            <div class="main-body">
+                <!-- 这里可以放置课程内容 -->
+            </div>
         </div>
     </section>
-    <!-- Awards -->
+
+    <!-- 实用随机过程 -->
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="stochastic-processes">
+        <div class="container px-5">
+            <header>
+                <h2><i class="bi bi-dice-5"></i> 实用随机过程</h2>
+            </header>
+            <div class="main-body">
+                <!-- 这里可以放置课程内容 -->
+            </div>
+        </div>
+    </section>
+
+    <!-- 数理统计 -->
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="mathematical-statistics">
+        <div class="container px-5">
+            <header>
+                <h2><i class="bi bi-bar-chart-line"></i> 数理统计</h2>
+            </header>
+            <div class="main-body">
+                <!-- 这里可以放置课程内容 -->
+            </div>
+        </div>
+    </section>
+
+    <!-- 实分析 -->
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="real-analysis">
+        <div class="container px-5">
+            <header>
+                <h2><i class="bi bi-infinity"></i> 实分析</h2>
+            </header>
+            <div class="main-body">
+                <!-- 这里可以放置课程内容 -->
+            </div>
+        </div>
+    </section>
+
+    <!-- 政治课 -->
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="politics">
+        <div class="container px-5">
+            <header>
+                <h2><i class="bi bi-journal-text"></i> 政治课</h2>
+            </header>
+            <div class="main-body">
+                <!-- 这里可以放置课程内容 -->
+            </div>
+        </div>
+    </section>
 
 
     <!-- Footer-->
