--- a/index.html
+++ b/index.html
@@ -39,74 +39,68 @@
 
     <!-- Mathematics -->
     <script>
-        // See https://docs.mathjax.org/en/latest/index.html for more details.
         MathJax = {
             tex: {
-                packages: {},              // extensions to use
-                inlineMath: [              // start/end delimiter pairs for in-line math
-                    ['$', '$'],
-                    ['\\(', '\\)']
-                ],
-                displayMath: [             // start/end delimiter pairs for display math
-                    ['$$', '$$'],
-                    ['\\[', '\\]']
-                ],
-                processEscapes: false,      // use \$ to produce a literal dollar sign
-                processEnvironments: true, // process \begin{xxx}...\end{xxx} outside math mode
-                processRefs: true,         // process \ref{...} outside of math mode
-                digits: /^(?:[0-9]+(?:\{,\}[0-9]{3})*(?:\.[0-9]*)?|\.[0-9]+)/,    // pattern for recognizing numbers
-                tags: 'all',              // or 'ams' or 'all'
-                tagSide: 'right',          // side for \tag macros
-                tagIndent: '0.8em',        // amount to indent tags
-                useLabelIds: true,         // use label name rather than tag for ids
-                maxMacros: 10000,          // maximum number of macro substitutions per expression
-                maxBuffer: 5 * 1024,       // maximum size for the internal TeX string (5K)
-                // baseURL:                   // URL for use with links to tags (when there is a <base> tag in effect)
-                // (document.getElementsByTagName('base').length === 0) ? '' : String(document.location).replace(/#.*$/, ''),
-                formatError:               // function called when TeX syntax errors occur
-                    (jax, err) => jax.formatError(err)
+                packages: {},
+                inlineMath: [['$', '$'], ['\\(', '\\)']],
+                displayMath: [['$$', '$$'], ['\\[', '\\]']],
+                processEscapes: false,
+                processEnvironments: true,
+                processRefs: true,
+                digits: /^(?:[0-9]+(?:\{,\}[0-9]{3})*(?:\.[0-9]*)?|\.[0-9]+)/,
+                tags: 'all',
+                tagSide: 'right',
+                tagIndent: '0.8em',
+                useLabelIds: true,
+                maxMacros: 10000,
+                maxBuffer: 5 * 1024,
+                formatError: (jax, err) => jax.formatError(err)
             }
         };
     </script>
-    <script type="text/javascript" id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
+    <!-- 修复：只保留一个MathJax脚本 -->
     <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     
     <!-- Core JS-->
-    <script type="text/javascript" src="static/js/scripts.js"></script>
     <script type="text/javascript" src="static/js/js-yaml.min.js"></script>
+    <script type="text/javascript" src="static/js/scripts.js"></script>
 
 </head>
 
 <body id="page-top">
     <!-- Navigation-->
     <nav class="header navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
-        <!-- 修改导航菜单部分，保持其他所有内容不变 -->
-<div class="collapse navbar-collapse" id="navbarResponsive">
-    <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
-        <li class="nav-item">
-            <a class="nav-link me-lg-3" href="#home">网站首页</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link me-lg-3" href="#differential-equations">微分方程概论</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link me-lg-3" href="#linear-algebra">线性代数B2</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link me-lg-3" href="#stochastic-processes">实用随机过程</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link me-lg-3" href="#mathematical-statistics">数理统计</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link me-lg-3" href="#real-analysis">实分析</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link me-lg-3" href="#politics">政治课</a>
-        </li>
-    </ul>
-</div>
-                    </nav>
+        <div class="container px-5">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#home">网站首页</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#differential-equations">微分方程概论</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#linear-algebra">线性代数B2</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#stochastic-processes">实用随机过程</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#mathematical-statistics">数理统计</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#real-analysis">实分析</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#politics">政治课</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <!-- Top Section -->
     <section class="top-section" style="background-image: url('static/assets/img/background.jpg');">
@@ -121,90 +115,91 @@
     <!-- Photo -->
     <div class="container px-5">
         <div id="avatar">
-            <img class="shadow" src="static/assets/img/photo.jpg">
+            <img class="shadow" src="static/assets/img/photo.jpg" alt="个人照片">
         </div>
     </div>
     <!-- Photo -->
     
    <!-- 首页内容 -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="home">
+    <section class="bg-gradient-primary-to-secondary-light mt-5 md-5" id="home">
         <div class="container px-5">
             <header>
                 <h2><i class="bi bi-house-door"></i> 网站首页</h2>
             </header>
-            <div class="main-body">
+            <div class="main-body" id="home-md">
+                <!-- Markdown内容将加载到这里 -->
             </div>
         </div>
     </section>
 
     <!-- 微分方程概论 -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="differential-equations">
+    <section class="bg-gradient-primary-to-secondary-gray mt-5 md-5" id="differential-equations">
         <div class="container px-5">
             <header>
                 <h2><i class="bi bi-graph-up"></i> 微分方程概论</h2>
             </header>
-            <div class="main-body">
-                <!-- 这里可以放置课程内容 -->
+            <div class="main-body" id="differential-equations-md">
+                <!-- Markdown内容将加载到这里 -->
             </div>
         </div>
     </section>
 
     <!-- 线性代数B2 -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="linear-algebra">
+    <section class="bg-gradient-primary-to-secondary-light mt-5 md-5" id="linear-algebra">
         <div class="container px-5">
             <header>
                 <h2><i class="bi bi-grid"></i> 线性代数B2</h2>
             </header>
-            <div class="main-body">
-                <!-- 这里可以放置课程内容 -->
+            <div class="main-body" id="linear-algebra-md">
+                <!-- Markdown内容将加载到这里 -->
             </div>
         </div>
     </section>
 
     <!-- 实用随机过程 -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="stochastic-processes">
+    <section class="bg-gradient-primary-to-secondary-gray mt-5 md-5" id="stochastic-processes">
         <div class="container px-5">
             <header>
                 <h2><i class="bi bi-dice-5"></i> 实用随机过程</h2>
             </header>
-            <div class="main-body">
-                <!-- 这里可以放置课程内容 -->
+            <div class="main-body" id="stochastic-processes-md">
+                <!-- Markdown内容将加载到这里 -->
             </div>
         </div>
     </section>
 
     <!-- 数理统计 -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="mathematical-statistics">
+    <section class="bg-gradient-primary-to-secondary-light mt-5 md-5" id="mathematical-statistics">
         <div class="container px-5">
             <header>
                 <h2><i class="bi bi-bar-chart-line"></i> 数理统计</h2>
             </header>
-            <div class="main-body">
-                <!-- 这里可以放置课程内容 -->
+            <div class="main-body" id="mathematical-statistics-md">
+                <!-- Markdown内容将加载到这里 -->
             </div>
         </div>
     </section>
 
     <!-- 实分析 -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="real-analysis">
+    <section class="bg-gradient-primary-to-secondary-gray mt-5 md-5" id="real-analysis">
         <div class="container px-5">
             <header>
                 <h2><i class="bi bi-infinity"></i> 实分析</h2>
             </header>
-            <div class="main-body">
-                <!-- 这里可以放置课程内容 -->
+            <div class="main-body" id="real-analysis-md">
+                <!-- Markdown内容将加载到这里 -->
             </div>
         </div>
     </section>
 
     <!-- 政治课 -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="politics">
+    <section class="bg-gradient-primary-to-secondary-light mt-5 md-5" id="politics">
         <div class="container px-5">
             <header>
                 <h2><i class="bi bi-journal-text"></i> 政治课</h2>
             </header>
-            <div class="main-body">
-                <!-- 这里可以放置课程内容 -->
+            <div class="main-body" id="politics-md">
+                <!-- Markdown内容将加载到这里 -->
             </div>
         </div>
     </section>
