--- a/contents/politics.html
+++ b/contents/politics.html
@@ -367,7 +367,7 @@ display: none;
 </div>
 <div id="马原" class="section level3">
 <h3>马原</h3>
-<p><a href="https://pdfhost.io/zh-CN/v/65qnqCYYQq_史纲">马原</a></p>
+<p><a href="https://pdfhost.io/zh-CN/v/CFjt8wKP3h_马原">马原</a></p>
 </div>
 <div id="毛概" class="section level3">
 <h3>毛概</h3>
